--- a/accelerator.cbp
+++ b/accelerator.cbp
@@ -20,6 +20,9 @@
 					<Add directory="ast" />
 					<Add directory="collections" />
 					<Add directory="context" />
+					<Add directory="context/statments" />
+					<Add directory="contextstatments" />
+					<Add directory="context/expressions" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
@@ -35,6 +38,9 @@
 					<Add directory="ast" />
 					<Add directory="collections" />
 					<Add directory="context" />
+					<Add directory="context/statments" />
+					<Add directory="contextstatments" />
+					<Add directory="context/expressions" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -71,59 +77,88 @@
 		<Unit filename="ast/atemplate.h" />
 		<Unit filename="ast/atoken.cpp" />
 		<Unit filename="ast/atoken.h" />
+		<Unit filename="context/class.cpp" />
+		<Unit filename="context/class.h" />
 		<Unit filename="context/classobject.cpp" />
 		<Unit filename="context/classobject.h" />
 		<Unit filename="context/classtype.cpp" />
 		<Unit filename="context/classtype.h" />
+		<Unit filename="context/context.cpp" />
+		<Unit filename="context/context.h" />
+		<Unit filename="context/delegate.cpp" />
+		<Unit filename="context/delegate.h" />
 		<Unit filename="context/enum.cpp" />
 		<Unit filename="context/enum.h" />
 		<Unit filename="context/expression.cpp" />
 		<Unit filename="context/expression.h" />
+		<Unit filename="context/expressions/accessexpression.cpp" />
+		<Unit filename="context/expressions/accessexpression.h" />
+		<Unit filename="context/expressions/assignmentexpression.cpp" />
+		<Unit filename="context/expressions/assignmentexpression.h" />
+		<Unit filename="context/expressions/booleanexpression.cpp" />
+		<Unit filename="context/expressions/booleanexpression.h" />
+		<Unit filename="context/expressions/castexpression.cpp" />
+		<Unit filename="context/expressions/castexpression.h" />
+		<Unit filename="context/expressions/constantexpression.cpp" />
+		<Unit filename="context/expressions/constantexpression.h" />
+		<Unit filename="context/expressions/invokeexpression.cpp" />
+		<Unit filename="context/expressions/invokeexpression.h" />
+		<Unit filename="context/expressions/newexpression.cpp" />
+		<Unit filename="context/expressions/newexpression.h" />
+		<Unit filename="context/expressions/nifixexpression.cpp" />
+		<Unit filename="context/expressions/nifixexpression.h" />
+		<Unit filename="context/expressions/postfixexpression.cpp" />
+		<Unit filename="context/expressions/postfixexpression.h" />
+		<Unit filename="context/expressions/prefixexpression.cpp" />
+		<Unit filename="context/expressions/prefixexpression.h" />
+		<Unit filename="context/expressiontype.h" />
+		<Unit filename="context/function.cpp" />
+		<Unit filename="context/function.h" />
 		<Unit filename="context/interface.cpp" />
 		<Unit filename="context/interface.h" />
 		<Unit filename="context/literal.cpp" />
 		<Unit filename="context/literal.h" />
 		<Unit filename="context/literaltype.h" />
+		<Unit filename="context/modifier.h" />
 		<Unit filename="context/node.cpp" />
 		<Unit filename="context/node.h" />
 		<Unit filename="context/nodetype.h" />
 		<Unit filename="context/package.cpp" />
 		<Unit filename="context/package.h" />
+		<Unit filename="context/protocoltype.h" />
 		<Unit filename="context/statment.cpp" />
 		<Unit filename="context/statment.h" />
+		<Unit filename="context/statments/blockstatment.cpp" />
+		<Unit filename="context/statments/blockstatment.h" />
+		<Unit filename="context/statments/breakstatment.cpp" />
+		<Unit filename="context/statments/breakstatment.h" />
+		<Unit filename="context/statments/continuestatment.cpp" />
+		<Unit filename="context/statments/continuestatment.h" />
+		<Unit filename="context/statments/declarestatment.cpp" />
+		<Unit filename="context/statments/declarestatment.h" />
+		<Unit filename="context/statments/expressionstatment.cpp" />
+		<Unit filename="context/statments/expressionstatment.h" />
+		<Unit filename="context/statments/forstatment.cpp" />
+		<Unit filename="context/statments/forstatment.h" />
+		<Unit filename="context/statments/ifstatment.cpp" />
+		<Unit filename="context/statments/ifstatment.h" />
+		<Unit filename="context/statments/returnstatment.cpp" />
+		<Unit filename="context/statments/returnstatment.h" />
+		<Unit filename="context/statments/switchstatment.cpp" />
+		<Unit filename="context/statments/switchstatment.h" />
+		<Unit filename="context/statments/whilestatment.cpp" />
+		<Unit filename="context/statments/whilestatment.h" />
+		<Unit filename="context/statmenttype.h" />
+		<Unit filename="context/template.cpp" />
+		<Unit filename="context/template.h" />
 		<Unit filename="context/token.cpp" />
 		<Unit filename="context/token.h" />
 		<Unit filename="main.cpp" />
 		<Unit filename="manager/packagemanager.cpp" />
 		<Unit filename="manager/packagemanager.h" />
-		<Unit filename="module/class.cpp" />
-		<Unit filename="module/class.h" />
-		<Unit filename="module/classobject.cpp" />
-		<Unit filename="module/classobject.h" />
-		<Unit filename="module/enum.cpp" />
-		<Unit filename="module/enum.h" />
-		<Unit filename="module/enumbit.cpp" />
-		<Unit filename="module/enumbit.h" />
-		<Unit filename="module/function.cpp" />
-		<Unit filename="module/function.h" />
-		<Unit filename="module/identify.cpp" />
-		<Unit filename="module/identify.h" />
-		<Unit filename="module/identifylist.cpp" />
-		<Unit filename="module/identifylist.h" />
-		<Unit filename="module/interface.cpp" />
-		<Unit filename="module/interface.h" />
-		<Unit filename="module/package.cpp" />
-		<Unit filename="module/package.h" />
-		<Unit filename="module/protocol.h" />
-		<Unit filename="module/statment.cpp" />
-		<Unit filename="module/statment.h" />
-		<Unit filename="module/template.cpp" />
-		<Unit filename="module/template.h" />
 		<Unit filename="parser/lexer.l">
 			<Option compile="1" />
 		</Unit>
-		<Unit filename="parser/lexer.scanner.cc" />
-		<Unit filename="parser/parser.h" />
 		<Unit filename="parser/parser.y">
 			<Option compile="1" />
 		</Unit>
